--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -7,17 +7,17 @@
 @theme {
   --radius-lg: calc(var(--ui-radius) * 2);
 
-  --color-neutral-50: #f6f6f6;
-  --color-neutral-100: #e7e7e7;
-  --color-neutral-200: #d1d1d1;
-  --color-neutral-300: #b0b0b0;
-  --color-neutral-400: #888888;
-  --color-neutral-500: #6d6d6d;
-  --color-neutral-600: #4f4f4f;
-  --color-neutral-700: #4f4f4f;
-  --color-neutral-800: #454545;
-  --color-neutral-900: #1e1e1e;
-  --color-neutral-950: #0a0a0a;
+  --color-neutral-50: #f4f4f4;
+  --color-neutral-100: #e6e6e5;
+  --color-neutral-200: #d1d0cf;
+  --color-neutral-300: #b9b8b7;
+  --color-neutral-400: #9a9996;
+  --color-neutral-500: #77767b;
+  --color-neutral-600: #5e5c64;
+  --color-neutral-700: #3d3846;
+  --color-neutral-800: #241f31;
+  --color-neutral-900: #0a0a0a;
+  --color-neutral-950: #000;
 
   --color-primary-50: var(--ui-color-primary-50);
   --color-primary-100: var(--ui-color-primary-100);
@@ -32,10 +32,6 @@
   --color-primary-950: var(--ui-color-primary-950);
 }
 
-.dark {
-  --ui-bg: var(--color-neutral-950);
-  --ui-border: var(--ui-color-neutral-900);
-}
 
 * {
   font-family: "Nunito", sans-serif;
