--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -7,17 +7,17 @@
 @theme {
   --radius-lg: calc(var(--ui-radius) * 2);
 
-  --color-neutral-50: #f6f6f6;
-  --color-neutral-100: #e7e7e7;
-  --color-neutral-200: #d1d1d1;
-  --color-neutral-300: #b0b0b0;
-  --color-neutral-400: #888888;
-  --color-neutral-500: #6d6d6d;
-  --color-neutral-600: #4f4f4f;
-  --color-neutral-700: #4f4f4f;
-  --color-neutral-800: #454545;
-  --color-neutral-900: #1e1e1e;
-  --color-neutral-950: #0a0a0a;
+  --color-neutral-50:  #F4F4F4;
+  --color-neutral-100: #E6E6E5;
+  --color-neutral-200: #D1D0CF;
+  --color-neutral-300: #B9B8B7;
+  --color-neutral-400: #9A9996;
+  --color-neutral-500: #77767B;
+  --color-neutral-600: #5E5C64;
+  --color-neutral-700: #3D3846;
+  --color-neutral-800: #241F31;
+  --color-neutral-900: #0E0D12;
+  --color-neutral-950: #000000;
 
   --color-primary-50: var(--ui-color-primary-50);
   --color-primary-100: var(--ui-color-primary-100);
