--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -6,7 +6,7 @@
 
 @theme {
   --radius-lg: calc(var(--ui-radius) * 2);
-
+/* 
   --color-neutral-50:  #F4F4F4;
   --color-neutral-100: #E6E6E5;
   --color-neutral-200: #D1D0CF;
@@ -16,8 +16,8 @@
   --color-neutral-600: #5E5C64;
   --color-neutral-700: #3D3846;
   --color-neutral-800: #241F31;
-  --color-neutral-900: #0E0D12;
-  --color-neutral-950: #000000;
+  --color-neutral-900: #15131D;
+  --color-neutral-950: #0E0D12;
 
   --color-primary-50: var(--ui-color-primary-50);
   --color-primary-100: var(--ui-color-primary-100);
@@ -29,12 +29,12 @@
   --color-primary-700: var(--ui-color-primary-700);
   --color-primary-800: var(--ui-color-primary-800);
   --color-primary-900: var(--ui-color-primary-900);
-  --color-primary-950: var(--ui-color-primary-950);
+  --color-primary-950: var(--ui-color-primary-950); */
 }
 
 .dark {
-  --ui-bg: var(--color-neutral-950);
-  --ui-border: var(--ui-color-neutral-900);
+  /* --ui-bg: var(--color-neutral-950);
+  --ui-border: var(--ui-color-neutral-900); */
 }
 
 * {
